--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                 <li><a href="https://www.bushwalking101.org/interpreting-map-features/?fbclid=IwAR2Pe6NCEawMXrAT94DBvMH5OH14LatoIUt9Akh1DCrRCr9YEn3C8LBiap4">Interpreting map features</a></li>
                 <li><a href="https://viva.pressbooks.pub/petrology/chapter/2-7-properties-under-cross-polarized-light/?fbclid=IwAR363Wkg4425v0ckj7k3EgAxx55TkzWC5JGkynTyOS_7dw9FEFfFbTx3ltE">Properties Under Cross Polarized Light</a></li>
                 <li><a href="http://www.alexstrekeisen.it/english/pluto/index.php">Thin section</a></li>
+               </ul>
+            </li>
+            <li class="dropdown"><a href="#"><span>Online Available Books</span> <i class="bi bi-chevron-right"></i></a>
+              <ul>
                 <li><a href="https://opengeology.org/petrology/01-introduction-to-petrology/">Petrology</a></li>
                 <li><a href="https://www.geokniga.org/bookfiles/geokniga-igneousandmetamorphicpetrologybymyrongbestz-liborg.pdf">IGNEOUS AND METAMORPHIC PETROLOGY</a></li>
                 <li><a href="https://www.geokniga.org/bookfiles/geokniga-petrology-sedimentary-rocks_0.pdf">PETROLOGY OF SEDIMENTARY ROCKS</a></li>  
