--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <span>About Me</span>
           <h2>About Me</h2>
           <p>I am Nawaraj Parajuli, presently holding the position of Assistant Professor
-            in the Department of Geology at Prithivi Narayan Campus, Tribhuvan University.
+            in the Department of Geology, Tribhuvan University.
           This student participation site has been established as a central platform to showcase my academic
             and research pursuits. To navigate through the various sections of this student participationsite, 
             you may conveniently utilize the navigation tabs located above.  
