--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
           <p>I am Nawaraj Parajuli, presently holding the position of Assistant Professor
             in the Department of Geology, Tribhuvan University.
           This student participation site has been established as a central platform to showcase my academic
-            and research pursuits. To navigate through the various sections of this student participationsite, 
+            and research pursuits. To navigate through the various sections of this student participation site, 
             you may conveniently utilize the navigation tabs located above.  
             My professional expertise primarily encompasses the domains of structural and 
             engineering geology. I earned my M.Sc. degree from Tribhuvan University and 
             have been ardently imparting my knowledge and enthusiasm for geology to student
-            at Prithvi Narayan Campus since the inception of my tenure in 2020.</p>
+            at Prithvi Narayan Campus, Tribhuvan Univeristy since the inception of my tenure in 2020.</p>
         </div>
 
         <div class="row">
