--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
                     <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
                     <a href="https://www.facebook.com/NRParajuli" class="facebook"><i class="bi bi-facebook"></i></a>
                     <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                    <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
+                    <a href="https://www.researchgate.net/profile/Nawaraj-Parajuli" class="ResearchGate"><i class="bi bi-ResearchGate"></i></a>
                     <a href="https://www.linkedin.com/in/nawaraj-parajuli-3a4875295/" class="linkedin"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
@@ -598,7 +598,7 @@
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.facebook.com/NRParajuli" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="https://www.researchgate.net/profile/Nawaraj-Parajuli"><i class="bx bxl-ResearchGate"></i></a>
+        <a href="https://www.researchgate.net/profile/Nawaraj-Parajuli" class="ResearchGate"><i class="bx bxl-ResearchGate"></i></a>
         <a href="https://www.linkedin.com/in/nawaraj-parajuli-3a4875295/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
