--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
                     <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
                     <a href="https://www.facebook.com/NRParajuli" class="facebook"><i class="bi bi-facebook"></i></a>
                     <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                    <a href="https://www.researchgate.net/profile/Nawaraj-Parajuli" class="researchGate"><i class="bi bi-researchgate"></i></a>
+                    <a href="https://www.researchgate.net/profile/Nawaraj-Parajuli" class="researchGate"><i class="bi bi-search"></i></a>
                     <a href="https://www.linkedin.com/in/nawaraj-parajuli-3a4875295/" class="linkedin"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
