--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
         
         <a href="https://www.facebook.com/NRParajuli" class="facebook"><i class="bx bxl-facebook"></i></a>
         
-        <a href="https://www.researchgate.net/profile/Nawaraj-Parajuli" class="ResearchGate"><i class="bx bxl-ResearchGate"></i></a>
+        <a href="https://www.researchgate.net/profile/Nawaraj-Parajuli" class="ResearchGate"><i class="bx bxl-search"></i></a>
         <a href="https://www.linkedin.com/in/nawaraj-parajuli-3a4875295/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
