--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
                 <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
                   <div class="count-box">
-                    <i class="bi bi-journal-richtextr" style="color: #8a1ac2;"></i>
+                    <i class="bi bi-briefcase" style="color: #8a1ac2;"></i>
                     <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
                     <p><strong>Projects</strong> Projects are mainly related to geology fieldworks and mapping works</p>
                   </div>
