--- a/index.html
+++ b/index.html
@@ -593,9 +593,9 @@
       <h3>Nawaraj Parajuli, Assistant Professor of Geology</h3>
       <p>With great knowledge comes great responsibilty</p>
       <div class="social-links">
-        <a href="https://www.facebook.com/NRParajuli" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.researchgate.net/profile/Nawaraj-Parajuli" class="researchGate"><i class="bx bxl-search"></i></a>
-        <a href="https://www.linkedin.com/in/nawaraj-parajuli-3a4875295/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com/NRParajuli" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.researchgate.net/profile/Nawaraj-Parajuli" class="researchGate"><i class="bi bi-search"></i></a>
+        <a href="https://www.linkedin.com/in/nawaraj-parajuli-3a4875295/" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>Nawaraj</span></strong>. All Rights Reserved
