--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-1.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Against the breathtaking backdrop of the Annapurna Mountain Range, the eager minds of first and second-year B.Sc. students embark on a transformative journey, where the timeless wisdom of geological field concepts unfolds amidst nature's grandeur, igniting a lifelong passion for understanding our planet's intricate tapestry</h4>
-              <p>App</p>
+              <p>Student Participation</p>
               <a href="assets/img/Geological field work/FW-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
@@ -424,7 +424,7 @@
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-3.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Amidst the whispers of the natural world, third-year B.Sc. geology students immerse themselves in the art of scientific storytelling, weaving their experiences and insights into the intricate tapestry of a geological field report, capturing the essence of their journey through the Earth's ancient narrative</h4>
-              <p>App</p>
+              <p>Desk work</p>
               <a href="assets/img/Geological field work/FW-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
@@ -454,7 +454,7 @@
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-6.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Embarking on a geological site visit with  professor Dr. Simon Klemperer from Stanford University, USA along with Program Coordinator of Department of Geology, Assistant Professor Durga Khatiwada and Earthquake Geologist Dr. Soma Nath Sapkota </h4>
-              <p>App</p>
+              <p>Research Idea Sharing</p>
               <a href="assets/img/Geological field work/FW-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
