--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1>Nawaraj Parajuli, Assistant Professor</h1>
+      <h1>Nawaraj Parajuli</h1>
+      <h1>Assistant Professor</h1>
       <h1>Department of Geology </h1>
       <h1>Tribhuvan University</h1>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
