--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             My professional expertise primarily encompasses the domains of structural and 
             engineering geology. I earned my M.Sc. degree from Tribhuvan University and 
             have been ardently imparting my knowledge and enthusiasm for geology to student
-            at Prithvi Narayan Campus, Tribhuvan Univeristy since the inception of my tenure in 2020.</p>
+            at Prithvi Narayan Campus, Tribhuvan University since the inception of my tenure in 2020.</p>
         </div>
 
         <div class="row">
