--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               </div>
 
               <div class="progress">
-                <span class="skill">HTML <i class="val">25%</i></span>
+                <span class="skill">HTML, Python & R <i class="val">25%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
