--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li><a class="nav-link scrollto" href="#resume">Resume</a></li>
         <li><a class="nav-link scrollto" href="#teaching">Teaching</a></li>
         <li><a class="nav-link scrollto " href="#geological field work">Geological Field Work</a></li>
+        <li><a class="nav-link scrollto " href="#highlights">Highlights</a></li>
         <li class="dropdown"><a href="#"><span>Materials for Students</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Report Guidelines</a></li>
