--- a/Highlights.html
+++ b/Highlights.html
@@ -127,7 +127,7 @@
             
   
     <a href="/news/pr-opinion/our-natural-powerhouse-the-south-west-is-the-uks-hub-for-clean-green-growth">
-      <figure class="gallery-image-container">    <img alt="Getty geothermal pool" class="lazyload" data-src="https://d3bpgcke55gfwt.cloudfront.net/rails/active_storage/blobs/proxy/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBL2ZnQVE9PSIsImV4cCI6bnVsbCwicHVyIjoiYmxvYl9pZCJ9fQ==--cb428e6f25ffefa92fb56d9a21d174cc02cda479/GettyImages-1089802748.jpg"  />
+      <figure class="gallery-image-container">    <img alt="Getty geothermal pool" class="lazyload" data-src="assets/img/Highlights/20200702_191859.jpg"  />
 </figure>
         <div class="gallery-web-refresh-title">
           <span>Clean Energy: the hydropower<br /></span>
