--- a/Highlights.html
+++ b/Highlights.html
@@ -99,7 +99,7 @@
             
   
     <a href="/news/pr-opinion/our-final-frontier-the-land-below-ground">
-      <figure class="gallery-image-container">    <img alt="earth" class="lazyload" data-src="assets/img/Highlights/Bajedi Landslide.jpg"  />
+      <figure class="gallery-image-container">    <img alt="earth" class="lazyload" data-src="assets/img/Highlights/Bajedi Landslide.gif"  />
 </figure>
         <div class="gallery-web-refresh-title">
           <span>Local disaster resilience in remote mountainous environments<br /></span>
