--- a/Highlights.html
+++ b/Highlights.html
@@ -85,7 +85,7 @@
             
   
     <a href="/research/plymouth-pioneers/professor-iain-stewart/academic-spotlight">
-      <figure class="gallery-image-container">    <img alt="Getty planet Earth" class="lazyload" data-src="assets/img/Highlights/Bajedi Landslide.jpg"  />
+      <figure class="gallery-image-container">    <img alt="Getty planet Earth" class="lazyload" data-src="assets/img/Highlights/Sindhupalchowk.jpg"  />
 </figure>
         <div class="gallery-web-refresh-title">
           <span> Unveiling the hidden complexities of the land beneath the ground: Our final frontier<br /></span>
