--- a/Highlights.html
+++ b/Highlights.html
@@ -113,7 +113,7 @@
             
   
     <a href="/research/institutes/sustainable-earth">
-      <figure class="gallery-image-container">    <img alt="Sustainable Earth Institute" class="lazyload" data-src="assets/img/Highlights/AI_generated.webp"  />
+      <figure class="gallery-image-container">    <img alt="Sustainable Earth Institute" class="lazyload" data-src="assets/img/Highlights/AI_generated.jpg"  />
 </figure>
         <div class="gallery-web-refresh-title">
           <span>Department of Geology: Earth Institute<br /></span>
