--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Me</h3>
-                  <p>nawaraj.parajuli@prnc.tu.edu.np</p>
+                  <a class="email" itemprop="email" href="mailto:nawaraj.parajuli@prnc.tu.edu.np">nawaraj.parajuli@prnc.tu.edu.np</a>
                 </div>
               </div>
               <div class="col-md-6">
