--- a/index.html
+++ b/index.html
@@ -533,7 +533,10 @@
                   <h3>Social Profiles</h3>
                   <div class="social-links">
                     <a href="https://www.facebook.com/NRParajuli" class="facebook"><i class="bi bi-facebook"></i></a>
-                    <a href="https://www.researchgate.net/profile/Nawaraj-Parajuli" class="researchGate"><i class="bi bi-search"></i></a>
+                    <a href="https://www.researchgate.net/profile/Nawaraj-Parajuli" class="researchGate">
+                      <img src="assets/img/testimonials/Researchgate.png" alt="ResearchGate Logo" style="width: 20px; height: 20px;">
+                    </a>
+                    
                     <a href="https://www.linkedin.com/in/nawaraj-parajuli-3a4875295/" class="linkedin"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
