--- a/index.html
+++ b/index.html
@@ -534,8 +534,7 @@
                   <div class="social-links">
                     <a href="https://www.facebook.com/NRParajuli" class="facebook"><i class="bi bi-facebook"></i></a>
                     <a href="https://www.researchgate.net/profile/Nawaraj-Parajuli" class="researchGate">
-                      <img src="assets/img/testimonials/Researchgate.png">
-                    </a>
+                      <img src="assets/img/testimonials/Researchgate.png"></i></a>
                     
                     <a href="https://www.linkedin.com/in/nawaraj-parajuli-3a4875295/" class="linkedin"><i class="bi bi-linkedin"></i></a>
                   </div>
