--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <li><a class="nav-link scrollto" href="#about">About</a></li>
         <li><a class="nav-link scrollto" href="#resume">Resume</a></li>
         <li><a class="nav-link scrollto" href="#teaching">Teaching</a></li>
-        <li><a class="nav-link" href="conference.html">Conference</a></li>
+        <li><a class="nav-link" href="conference_N.html">Conference</a></li>
         <li><a class="nav-link scrollto " href="#geological field work">Geological Field Work</a></li>
         <li><a class="nav-link" href="Highlights.html">Highlights</a></li>
         <li class="dropdown"><a href="#"><span>Materials for Students</span> <i class="bi bi-chevron-down"></i></a>
