--- a/conference_N.html
+++ b/conference_N.html
@@ -64,7 +64,7 @@
                         <li><a class="nav-link" href="about.html">About Me</a></li>
                         <li><a class="nav-link" href="resume.html">Resume</a></li>
                         <li><a class="nav-link" href="articels.html">Publications</a></li>
-                        <li><a class="nav-link" href="conference.html">Conference</a></li>
+                        <li><a class="nav-link" href="conference_N.html">Conference</a></li>
 						<li><a class="nav-link" href="academic.html">Academic Research Gallery</a></li>
                         <li><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
