--- a/conference_N.html
+++ b/conference_N.html
@@ -78,34 +78,64 @@
             <div class="col-lg-6">
                 <li style="text-align: justify;">1. Presented a paper on 11th Nepal Geological Congress (NGC–XI) on Geosciences for Climate Change Adaptation, Natural Resources and Geo-hazard Management at Everest Hotel, Kathmandu, Nepal.The title of the paper is "A Thick Quartzite Succession in the Lesser Himalaya of Pokhara–Baglung Area: Implications for the Stratigraphy of Kuncha Formation".
 </li>
+<div class="section layout_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <li style="text-align: justify;"></li>
             </div>
         </div>
 		<div class="row">
             <div class="col-lg-6">
                 <li style="text-align: justify;">2. Virtually participated on International Conference American Geophysical Union (AGU) on “What’s Next for Science.” for paper entitled “Tectonic Imprints on Rocks of Taplejung Tectonic Window of Eastern Nepal” held  at Washington D.C. USA at Walter E. Washington Convention Center from Dec 9-13, 2024.
 </li>
+<div class="section layout_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <li style="text-align: justify;"></li>
             </div>
         </div>
 <div class="row">
             <div class="col-lg-6">
                 <li style="text-align: justify;">3. Participated and Paper presented entitled “Geotourism along the Annapurna Mountain Range” on 2nd International Sustainable Mountain Development and Tourism Conference: Science for Sustainable Mountain Development, and International River Congress at: Pokhara, Nepal</li>
-            </div>
+           <div class="section layout_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <li style="text-align: justify;"></li>
+              </div>
         </div>
 		<div class="row">
             <div class="col-lg-6">
                 <li style="text-align: justify;">4. Participated and Paper presented entitled “Engineering Geological Controls on the Geo-disaster in parts of Pokhara Valley” on Conference on recent Trends in Science-Technology and Innovation, RTSTI-2023 Pokhara, Nepal jointly organized by center For Research and Innovation-Prithvi Narayan Campus, Pokhara and Gandaki Province Academy of Science and Technology (GPAST) on May 25-26, 2023.</li>
-            </div>
+           <div class="section layout_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <li style="text-align: justify;"></li>
+              </div>
         </div>
         <div class="row">
             <div class="col-lg-6">
                 <li style="text-align: justify;">5. Participated  on 35th Himalayan-Karakoram-Tibet Workshop (HKT) “Geosciences for People’s Prosperity and Sustainable Development” November 02-04, 2022.
 </li>
+<div class="section layout_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <li style="text-align: justify;"></li>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-6">
                 <li style="text-align: justify;">6. Participated  on 9th Nepal Geological Congress (NGC-IX) Kathmandu, Nepal 19–21 November 2018</li>
-            </div>
+            <div class="section layout_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <li style="text-align: justify;"></li>
+              </div>
         </div>
     </div>
 </div>
