--- a/conference_N.html
+++ b/conference_N.html
@@ -72,43 +72,66 @@
   
 	
 		<!-- section -->
+<!-- section -->
 <div class="section layout_padding">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                <li style="text-align: justify;">1. Presented a paper on 11th Nepal Geological Congress (NGC–XI) on Geosciences for Climate Change Adaptation, Natural Resources and Geo-hazard Management at Everest Hotel, Kathmandu, Nepal.The title of the paper is "A Thick Quartzite Succession in the Lesser Himalaya of Pokhara–Baglung Area: Implications for the Stratigraphy of Kuncha Formation".
-</li>
-            </div>
-        </div>
-		<div class="row">
-            <div class="col-lg-6">
-                <li style="text-align: justify;">2. Virtually participated on International Conference American Geophysical Union (AGU) on “What’s Next for Science.” for paper entitled “Tectonic Imprints on Rocks of Taplejung Tectonic Window of Eastern Nepal” held  at Washington D.C. USA at Walter E. Washington Convention Center from Dec 9-13, 2024.
-</li>
-            </div>
-        </div>
-<div class="row">
-            <div class="col-lg-6">
-                <li style="text-align: justify;">3. Participated and Paper presented entitled “Geotourism along the Annapurna Mountain Range” on 2nd International Sustainable Mountain Development and Tourism Conference: Science for Sustainable Mountain Development, and International River Congress at: Pokhara, Nepal</li>
-            </div>
-        </div>
-		<div class="row">
-            <div class="col-lg-6">
-                <li style="text-align: justify;">4. Participated and Paper presented entitled “Engineering Geological Controls on the Geo-disaster in parts of Pokhara Valley” on Conference on recent Trends in Science-Technology and Innovation, RTSTI-2023 Pokhara, Nepal jointly organized by center For Research and Innovation-Prithvi Narayan Campus, Pokhara and Gandaki Province Academy of Science and Technology (GPAST) on May 25-26, 2023.</li>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-6">
-                <li style="text-align: justify;">5. Participated  on 35th Himalayan-Karakoram-Tibet Workshop (HKT) “Geosciences for People’s Prosperity and Sustainable Development” November 02-04, 2022.
-</li>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-6">
-                <li style="text-align: justify;">6. Participated  on 9th Nepal Geological Congress (NGC-IX) Kathmandu, Nepal 19–21 November 2018</li>
-            </div>
-        </div>
+
+        <style>
+            .section li {
+                margin-bottom: 18px; /* line gap after each paragraph */
+                text-align: justify;
+            }
+        </style>
+
+        <ul>
+            <li>
+                Presented a paper at the <strong>11th Nepal Geological Congress (NGC–XI)</strong> on
+                “Geosciences for Climate Change Adaptation, Natural Resources, and Geo-hazard Management”,
+                held at Everest Hotel, Kathmandu, Nepal.
+                <br><strong>Paper title:</strong>
+                “A Thick Quartzite Succession in the Lesser Himalaya of the Pokhara–Baglung Area:
+                Implications for the Stratigraphy of the Kuncha Formation.”
+            </li>
+
+            <li>
+                Virtually participated in the <strong>International Conference of the American Geophysical Union (AGU)</strong>
+                on “What’s Next for Science,” presenting the paper entitled
+                “Tectonic Imprints on Rocks of the Taplejung Tectonic Window of Eastern Nepal.”
+                The conference was held at the Walter E. Washington Convention Center, Washington, D.C., USA,
+                from <strong>December 9–13, 2024</strong>.
+            </li>
+
+            <li>
+                Participated and presented a paper entitled
+                “Geotourism along the Annapurna Mountain Range”
+                at the <strong>2nd International Conference on Sustainable Mountain Development and Tourism</strong>
+                and the <strong>International River Congress</strong>, held in Pokhara, Nepal.
+            </li>
+
+            <li>
+                Participated and presented a paper entitled
+                “Engineering Geological Controls on Geo-disasters in Parts of Pokhara Valley”
+                at the <strong>Conference on Recent Trends in Science, Technology, and Innovation (RTSTI-2023)</strong>,
+                Pokhara, Nepal, jointly organized by the Center for Research and Innovation,
+                Prithvi Narayan Campus, Pokhara, and the Gandaki Province Academy of Science and Technology (GPAST),
+                held on <strong>May 25–26, 2023</strong>.
+            </li>
+
+            <li>
+                Participated in the <strong>35th Himalayan–Karakoram–Tibet (HKT) Workshop</strong> on
+                “Geosciences for People’s Prosperity and Sustainable Development,”
+                held from <strong>November 2–4, 2022</strong>.
+            </li>
+
+            <li>
+                Participated in the <strong>9th Nepal Geological Congress (NGC-IX)</strong>,
+                held in Kathmandu, Nepal, from <strong>November 19–21, 2018</strong>.
+            </li>
+        </ul>
+
     </div>
 </div>
+
 <div class="row">
     <div class="col-lg-12">
         <div id="demo" class="carousel slide" data-ride="carousel">
