--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <li><a class="nav-link scrollto" href="#about">About</a></li>
         <li><a class="nav-link scrollto" href="#resume">Resume</a></li>
         <li><a class="nav-link scrollto" href="#teaching">Teaching</a></li>
+        <li><a class="nav-link" href="publication.html">Publications</a></li>
         <li><a class="nav-link" href="conference_N.html">Conference</a></li>
         <li><a class="nav-link scrollto " href="#geological field work">Geological Field Work</a></li>
         <li><a class="nav-link" href="Highlights.html">Highlights</a></li>
