--- a/index.html
+++ b/index.html
@@ -33,6 +33,90 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>N Parajuli | Tribhuvan University</title>
+
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700" rel="stylesheet">
+
+  <style>
+    body {
+      font-family: "Raleway", sans-serif;
+    }
+
+    /* ===== HEADER ===== */
+    .custom-header {
+      height: 80px;
+      background: #1296f3;
+      position: relative;
+    }
+
+    .custom-header::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 260px;
+      height: 100%;
+      background: #f4b400;
+      clip-path: polygon(0 0, 85% 0, 65% 100%, 0 100%);
+      z-index: 0;
+    }
+
+    .custom-header .container-fluid {
+      position: relative;
+      z-index: 1;
+    }
+
+    .logo img {
+      height: 55px;
+    }
+
+    .navbar a {
+      color: #000;
+      font-size: 14px;
+      font-weight: 500;
+      letter-spacing: 1px;
+      text-decoration: none;
+      margin: 0 15px;
+    }
+
+    .navbar a:hover {
+      text-decoration: underline;
+    }
+
+    .search-icon {
+      font-size: 20px;
+      cursor: pointer;
+    }
+
+    /* ===== HERO ===== */
+    #hero {
+      height: 420px;
+      background: url("https://images.unsplash.com/photo-1501785888041-af3ef285b470") center/cover no-repeat;
+      display: flex;
+      align-items: center;
+    }
+
+    #hero h1 {
+      font-size: 44px;
+      font-weight: 600;
+      color: #000;
+    }
+
+    /* ===== CONTENT ===== */
+    section.content {
+      padding: 60px 0;
+    }
+  </style>
+</head>
 </head>
 
 <body>
