--- a/inner-page.html
+++ b/inner-page.html
@@ -43,7 +43,7 @@
     <nav id="navbar" class="navbar">
       <ul>
         <li><a class="nav-link scrollto " href="#hero">Home</a></li>
-        <li><a class="nav-link scrollto" href="#about">About</a></li>
+        <li><a class="nav-link scrollto" href="#about_me">About</a></li>
         <li><a class="nav-link scrollto" href="#resume">Resume</a></li>
         <li><a class="nav-link scrollto" href="#teaching">Teaching</a></li>
         <li><a class="nav-link" href="conference_N.html">Conference</a></li>
