--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <nav id="navbar" class="navbar">
       <ul>
         <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-        <li><a class="nav-link scrollto" href="#about_me">About</a></li>
+        <li><a class="nav-link scrollto" href="#about">About</a></li>
         <li><a class="nav-link scrollto" href="#resume">Resume</a></li>
         <li><a class="nav-link scrollto" href="#teaching">Teaching</a></li>
         <li><a class="nav-link" href="gallery.html">Gallery</a></li>
